# protoncli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
Formula/: protoncli.rb
migrations/: 001_initial_schema.sql  002_message_id_primary.sql  003_batch_operations.sql  004_shadow_uids.sql
scripts/: test_setup.sh  verify_raw.sh
src/: main.rs
src/assets/: query_help.txt
src/cli/: account.rs  actions.rs  draft.rs  folder.rs  label.rs  message.rs  mod.rs  query.rs  select.rs  send.rs
src/core/: auth.rs  imap.rs  mod.rs  smtp.rs  state.rs
src/models/: account.rs  config.rs  filter.rs  folder.rs  message.rs  mod.rs  query.rs
src/output/: json.rs  markdown.rs  table.rs
src/utils/: batch.rs  errors.rs  mod.rs
